--- a/MijnSocialPlan/MijnSocialPlan/Views/Shared/_Layout.cshtml
+++ b/MijnSocialPlan/MijnSocialPlan/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="download">Mijn Social Plannen <span class="caret"></span></a>
-                        <ul class="dropdown-menu" aria-labelledby="download">
+                        <ul id="userPlannenUl" class="dropdown-menu" aria-labelledby="download">
                             @Html.Action("GetUserSocialPlannenMenu", "SocialPlan")
                             <li class="divider"></li>
                             <li>
@@ -70,6 +70,24 @@
             <hr />
             <p>&copy; @DateTime.Now.Year - Prototype - Elyse Teerink</p>
         </footer>
+    </div>
+
+
+    <div class="modal" id="opgeslagenPlanPopup">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true" onclick="$('#opgeslagenPlanPopup').fadeOut();">×</button>
+                    <h4 class="modal-title">Uw Social Plan</h4>
+                </div>
+                <div class="modal-body">
+                    <p>Het bekijken van een eerder aangemaakt Social Plan is niet beschikbaar in het prototype.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" onclick="$('#opgeslagenPlanPopup').fadeOut();" data-dismiss="modal">Ok</button>
+                </div>
+            </div>
+        </div>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
